--- a/Front-End/angular.json
+++ b/Front-End/angular.json
@@ -14,9 +14,6 @@
           "builder": "@angular/build:application",
           "options": {
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
@@ -81,10 +78,6 @@
         "test": {
           "builder": "@angular/build:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
@@ -99,5 +92,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "5bbf98e8-df09-4663-bf97-ea38241e9167"
   }
 }
